[gd_scene load_steps=5 format=3]

[ext_resource type="SpriteFrames" uid="uid://y6eqsli8lr2t" path="res://addons/beehive/assets/arrow.tres" id="1"]
[ext_resource type="Script" path="res://src/dungeonCrawler/weapons/ArrowProjectile.gd" id="2"]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.5, 9 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.5, 11 )

[node name="ArrowProjectile" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
contact_monitor = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -9 )
shape = SubResource( 1 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2( 0, -13 )
sprite_frames = ExtResource( 1 )

[node name="RemoveTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, -9 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_ArrowProjectile_body_entered"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
